--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,28 @@
 @tailwind base;
-
 @tailwind components;
-
 @tailwind utilities;
+
+html {
+  font-family: 'Inter', sans-serif;
+}
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: 'Inter var', sans-serif;
+  }
+}
+
+html {
+  @apply bg-cover bg-no-repeat bg-[center_top] bg-fixed bg-[url('https://zquintxyz-public.s3.amazonaws.com/francisco-andreotti-noedenF0hNM-unsplash.jpg')];
+}
+
+ul {
+  @apply list-disc list-inside;
+
+  li {
+    @apply ml-4;
+  }
+}
+
+h1 {
+  @apply mb-[0.15em] text-3xl font-black text-gray-800;
+}
